# doublecherryGB-libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Makefile.common  README.md  metadata.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
Filter/Video/: Blur.hpp  DotMatrix.hpp  RGBSubpixel.hpp  VideoFilter.hpp
Util/: PixelUtil.hpp
docker/: Dockerfile
gb_core/: GBPaletteManager.cpp  GBPaletteManager.hpp  Infrared_Transceiver.cpp  Infrared_Transceiver.h  apu.cpp  cheat.cpp  cpu.cpp  gb.cpp  gb.h  lcd.cpp  mbc.cpp  renderer.h  rom.cpp
gb_core/GbPalettes/: GBPaletteManager.cpp  GBPaletteManager.hpp
gb_core/infrared/: full_changer.cpp  pikachu_2_gs.cpp  tv_remote.cpp  ubikey_unlocker.cpp
gb_core/infrared/include/: full_changer.hpp  ir_devices.hpp  pikachu_2_gs.hpp  tv_remote.hpp  ubikey_unlocker.hpp
gb_core/infrared/include/inline/: inline_tv_remote_code.hpp
gb_core/linkcable/: Mobil_Adapter_GB.cpp  Mobile_Adapter_GB.cpp  alleyway_link_controller.cpp  barcode_taisen_bardigun.cpp  barcodeboy.cpp  dmg07.cpp  dmg07x4.cpp  faceball2000_cable.cpp  game_and_watch_gallery_unlocker.cpp  gameboy_printer.cpp  hack_4p_burger_time_deluxe.cpp  hack_4p_kwirk.cpp  hack_4p_tetris.cpp  link_master_device.cpp  linkcable_hub.cpp  pkm_buddy_boy.cpp  pokebuddy_gen1.cpp  power_antenna.cpp
gb_core/linkcable/include/: Mobil_Adapter_GB.h  Mobil_Adapter_GB.hpp  Mobile_Adapter_GB.hpp  alleyway_link_controller.hpp  barcode_taisen_bardigun.hpp  barcodeboy.hpp  dmg07.hpp  dmg07x4.hpp  faceball2000_cable.hpp  game_and_watch_gallery_unlocker.hpp  gameboy_printer.hpp  hack_4p_burger_time_deluxe.hpp  hack_4p_kwirk.hpp  hack_4p_tetris.hpp  link_master_device.hpp  linkcable_hub.hpp  pkm_buddy_boy.hpp  pokebuddy_gen1.hpp  power_antenna.hpp  sio_devices.hpp
gb_core/linkcable/include/PKBuddy/: inline_pkbuddy_dist_events.h  inline_pkbuddy_generator.h  inline_pkbuddy_util.h  poke_data.h
gb_core/linkcable/include/barcodes/: barcode_boy_data.h  barcode_taisen_bardigun_data.h
gb_core/sio/: barcodeboy.cpp  barcodeboy.hpp  dmg07.hpp  faceball2000_cable.cpp  faceball2000_cable.hpp  hack_4p_kwirk.hpp  link_master_device.hpp  poke_data.h  pokebuddy_gen1.cpp  pokebuddy_gen1.hpp  power_antenna.hpp  sio_devices.hpp
gb_core/sio/PKBuddy/: inline_pkbuddy_dist_events.h  inline_pkbuddy_util.h  poke_data.h
jni/: Android.mk
libretro/: dcgb_hotkey_target.hpp  dmy_renderer.cpp  dmy_renderer.h  gbc_lut_accurate.h  libretro.cpp  libretro.h  libretro_core_options.h
libretro-common/include/: retro_inline.h  retro_timers.h
libretro/DoubleCherryEngine/: DoubleCherryEngine.h
libretro/DoubleCherryEngine/Enviroment/: EnviromentManager.cpp  EnviromentManager.h
libretro/DoubleCherryEngine/Netplay/: NetPacketManager.cpp  NetPacketManager.h  NetPacketReceiveHandler.cpp  NetPacketReceiveHandler.h  NetPacketSendHandler.cpp  NetPacketSendHandler.h  NetplayManager.cpp  NetplayManager.h
libretro/DoubleCherryEngine/Netplay/NetpacketHandler/: PokemonTcgNetpacketHandler.cpp  PokemonTcgNetpacketHandler.h
libretro/DoubleCherryEngine/common/interfaces/: ISingleton.hpp
libretro/Helpers/Netplay/: NetPacketManager.cpp  NetPacketManager.h  NetplayManager.h
libretro/inline/: inline_functions.h  inline_variables.h
services/printer/: bmp_printer.cpp  image_scaler.cpp  png_printer.cpp  printer_registry.cpp
services/printer/include/: bmp_printer.hpp  content_image_history_updater.hpp  image_scaler.hpp  png_printer.hpp  printer_interface.hpp  printer_registry.hpp
toolchains/: brick.cmake  miyoo.cmake  trimui.cmake
